--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <script>
         // Initialize the map
-        var map = L.map('map').setView(54.775, 9.45],12);
+        var map = L.map('map').setView([54.775, 9.45],12);
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '© OpenStreetMap contributors'
