--- a/index.html
+++ b/index.html
@@ -7,46 +7,30 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css">
     <style>
-     .modal {
-          display: none; 
+        #map { height: 100vh; }
+        .leaflet-draw { background-color: white; }
+        /* Modal CSS */
+        .modal {
+          display: none;
           position: fixed;
-          z-index: 1; 
-          padding-top: 100px; 
+          z-index: 1;
+          padding-top: 100px;
           left: 0;
           top: 0;
-          width: 100%; 
-          height: 100%; 
-          overflow: auto; 
-          background-color: rgb(0,0,0); 
-          background-color: rgba(0,0,0,0.4); 
+          width: 100%;
+          height: 100%;
+          overflow: auto;
+          background-color: rgb(0,0,0);
+          background-color: rgba(0,0,0,0.4);
         }
 
-        /* Modal Content */
         .modal-content {
           background-color: #fefefe;
           margin: auto;
           padding: 20px;
           border: 1px solid #888;
           width: 80%;
-        }
-
-        /* The Close Button */
-        .close {
-          color: #aaa;
-          float: right;
-          font-size: 28px;
-          font-weight: bold;
-        }
-
-        .close:hover,
-        .close:focus {
-          color: black;
-          text-decoration: none;
-          cursor: pointer;
-        }
-        #map { height: 100vh; }
-        .leaflet-draw { background-color: white; }
-        /* The Modal (background) */
+        }    
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
 </head>
